Fix overlapping issue in opening filter

--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ md-filled-button.drill-button {
 }
 .cg-shapes {
   pointer-events: none;
-  z-index: 10000;
+  z-index: 1;
   position: absolute;
   height: 288px;
   width: 288px;
